Use Base64.encoder/decoder directly